# architecture

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: python-ci.yml
src/application/entities/: user.py
src/application/interfaces/: database.py  user_database.py
src/infrastructure/databases/: in_memory.py  models.py  sqlite.py
src/infrastructure/databases/user/: in_memory.py
src/tests/unit/: test_user.py
src/tests/unit/application/: test_user.py
src/tests/unit/infrastrucure/databases/: test_in_memory.py  test_sqlite.py  test_user_in_memory.py
