[project]
name = "architecture"
version = "0.1.0"
authors = [
    {name = "Malick Abu Imran", email="daomalick225@gmail.com"},
]
dependencies = [
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
    "pytest==8.3.3",
    "mypy==1.11.2",
    "pre-commit==3.8.0",
    "ruff==0.6.8",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py39"
