[project]
name = "architecture"
version = "0.1.0"
authors = [
    {name = "Malick Abu Imran", email="daomalick225@gmail.com"},
]
dependencies = [
    "sqlalchemy==2.0.35",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
develop = [
    "mypy==1.11.2",
    "ruff==0.6.8",
    "pre-commit==3.8.0",
    "pytest==8.3.3",
    "coverage==7.6.1",
]

[tool.mypy]
strict = true

[tool.pytest.ini_options]
addopts = "-v --tb=short"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 100
target-version = "py39"
